WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
189974
[iOS] Special keys are misidentified in DOM keyboard events
https://bugs.webkit.org/show_bug.cgi?id=189974
Summary
[iOS] Special keys are misidentified in DOM keyboard events
Daniel Bates
Reported
2018-09-25 14:06:10 PDT
1. Visit <
https://unixpapa.com/js/testkey.html
> on iPad with a hardware keyboard attached. 2. Check the DOM 3 checkbox. 3. Press a special key, say F5, F6, Left Control, Left Option, Left Command, Left Shift, Caps Lock, Right Command, Right Option, Right Shift, Left Arrow, Up Arrow, Down Arrow, Right Arrow or Escape key (*). We either misidentify these keys as "Dead" or the name of UIKit-specific constant (e.g. UIKeyInputDownArrow). We should correctly identify a pressed key. (*) These are the special keys on the Magic Keyboard that are not system global (i.e. do not map to volume up, et cetera). Some keyboard may have additional special keys, including Page Up, Page Down, Num Lock/Clear, Home, End, and Forward Delete.
Attachments
Patch and layout tests
(49.30 KB, patch)
2018-09-25 15:38 PDT
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
Patch and layout tests
(49.32 KB, patch)
2018-09-25 15:39 PDT
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
Patch and layout tests
(49.37 KB, patch)
2018-09-25 16:47 PDT
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
Patch and layout tests
(45.41 KB, patch)
2018-09-25 16:52 PDT
,
Daniel Bates
ews-watchlist
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews105 for mac-sierra-wk2
(3.34 MB, application/zip)
2018-09-25 17:48 PDT
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews123 for ios-simulator-wk2
(26.18 MB, application/zip)
2018-09-25 18:51 PDT
,
EWS Watchlist
no flags
Details
Patch and layout tests
(45.41 KB, patch)
2018-09-28 09:49 PDT
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
Show Obsolete
(6)
View All
Add attachment
proposed patch, testcase, etc.
Daniel Bates
Comment 1
2018-09-25 14:07:19 PDT
***
Bug 189436
has been marked as a duplicate of this bug. ***
Daniel Bates
Comment 2
2018-09-25 15:38:01 PDT
Created
attachment 350803
[details]
Patch and layout tests
Daniel Bates
Comment 3
2018-09-25 15:39:18 PDT
Created
attachment 350804
[details]
Patch and layout tests
EWS Watchlist
Comment 4
2018-09-25 15:41:45 PDT
Comment hidden (obsolete)
Attachment 350804
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/ios/WebEvent.mm:147: More than one command on the same line [whitespace/newline] [4] Total errors found: 1 in 22 files If any of these errors are false positives, please file a bug against check-webkit-style.
Daniel Bates
Comment 5
2018-09-25 16:47:52 PDT
Created
attachment 350811
[details]
Patch and layout tests
EWS Watchlist
Comment 6
2018-09-25 16:52:11 PDT
Attachment 350811
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/ios/WebEvent.mm:147: More than one command on the same line [whitespace/newline] [4] Total errors found: 1 in 22 files If any of these errors are false positives, please file a bug against check-webkit-style.
Daniel Bates
Comment 7
2018-09-25 16:52:53 PDT
Created
attachment 350812
[details]
Patch and layout tests
EWS Watchlist
Comment 8
2018-09-25 16:55:30 PDT
Attachment 350812
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/ios/WebEvent.mm:147: More than one command on the same line [whitespace/newline] [4] Total errors found: 1 in 20 files If any of these errors are false positives, please file a bug against check-webkit-style.
EWS Watchlist
Comment 9
2018-09-25 17:48:35 PDT
Comment on
attachment 350812
[details]
Patch and layout tests
Attachment 350812
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
https://webkit-queues.webkit.org/results/9350290
New failing tests: css3/viewport-percentage-lengths/vh-resize.html
EWS Watchlist
Comment 10
2018-09-25 17:48:37 PDT
Created
attachment 350819
[details]
Archive of layout-test-results from ews105 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 11
2018-09-25 18:51:05 PDT
Comment on
attachment 350812
[details]
Patch and layout tests
Attachment 350812
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
https://webkit-queues.webkit.org/results/9350520
New failing tests: fast/frames/lots-of-objects.html fast/frames/lots-of-iframes.html webarchive/adopt-attribute-styled-body-webarchive.html
EWS Watchlist
Comment 12
2018-09-25 18:51:08 PDT
Created
attachment 350829
[details]
Archive of layout-test-results from ews123 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews123 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.6
Daniel Bates
Comment 13
2018-09-26 16:30:26 PDT
(In reply to Build Bot from
comment #9
)
> Comment on
attachment 350812
[details]
> Patch and layout tests > >
Attachment 350812
[details]
did not pass mac-wk2-ews (mac-wk2): > Output:
https://webkit-queues.webkit.org/results/9350290
> > New failing tests: > css3/viewport-percentage-lengths/vh-resize.html
This failure is unrelated to this patch.
Daniel Bates
Comment 14
2018-09-26 16:30:40 PDT
(In reply to Build Bot from
comment #11
)
> Comment on
attachment 350812
[details]
> Patch and layout tests > >
Attachment 350812
[details]
did not pass ios-sim-ews (ios-simulator-wk2): > Output:
https://webkit-queues.webkit.org/results/9350520
> > New failing tests: > fast/frames/lots-of-objects.html > fast/frames/lots-of-iframes.html > webarchive/adopt-attribute-styled-body-webarchive.html
These failures are unrelated to this patch.
Daniel Bates
Comment 15
2018-09-28 09:49:16 PDT
Created
attachment 351087
[details]
Patch and layout tests No change. Uploading the patch again to have the iOS EWS bots process it.
EWS Watchlist
Comment 16
2018-09-28 09:50:41 PDT
Attachment 351087
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/ios/WebEvent.mm:147: More than one command on the same line [whitespace/newline] [4] Total errors found: 1 in 20 files If any of these errors are false positives, please file a bug against check-webkit-style.
Daniel Bates
Comment 17
2018-10-01 11:35:41 PDT
Comment on
attachment 351087
[details]
Patch and layout tests Clearing flags on attachment: 351087 Committed
r236678
: <
https://trac.webkit.org/changeset/236678
>
Daniel Bates
Comment 18
2018-10-01 11:35:43 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 19
2018-10-01 11:36:37 PDT
<
rdar://problem/44915471
>
Daniel Bates
Comment 20
2018-10-01 15:48:36 PDT
Committed attempt to fix the watchOS build in <
https://trac.webkit.org/changeset/236694
>. (Note that PLATFORM(IOS) := TARGET_OS_IPHONE and TARGET_OS_IPHONE is set when building for watchOS).
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug