Source/WebCore/platform/ios/PlatformEventFactoryIOS.h
@@ -53,7 +53,6 @@ public:
 WEBCORE_EXPORT String keyForKeyEvent(WebEvent *);
 WEBCORE_EXPORT String codeForKeyEvent(WebEvent *);
 WEBCORE_EXPORT String keyIdentifierForKeyEvent(WebEvent *);
-WEBCORE_EXPORT int keyCodeForEvent(WebEvent *);
 
 } // namespace WebCore
 
