Source/WebKit/Shared/ios/WebIOSEventFactory.mm
@@ -58,8 +58,9 @@ WebKit::WebKeyboardEvent WebIOSEventFactory::createWebKeyboardEvent(::WebEvent *
     String key = WebCore::keyForKeyEvent(event);
     String code = WebCore::codeForKeyEvent(event);
     String keyIdentifier = WebCore::keyIdentifierForKeyEvent(event);
-    int windowsVirtualKeyCode = WebCore::keyCodeForEvent(event);
-    int nativeVirtualKeyCode = WebCore::keyCodeForEvent(event);
+    int windowsVirtualKeyCode = event.keyCode;
+    // FIXME: This is not correct. WebEvent.keyCode represents the Windows native virtual key code.
+    int nativeVirtualKeyCode = event.keyCode;
     int macCharCode = 0;
     bool autoRepeat = event.isKeyRepeating;
     bool isKeypad = false;
